fix: improve the readability of device statuses in the top header

--- a/apps/app/src/react/components/pages/homePage/scList/style.scss
+++ b/apps/app/src/react/components/pages/homePage/scList/style.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/foundation/colors';
+
 .header-label {
 	&:not(:last-child) {
 		border-right: 0.2rem solid rgba(255, 255, 255, 0.3);
@@ -23,12 +25,12 @@
 .status-circle {
 	width: 0.8rem;
 	height: 0.8rem;
-	background: #c03f3f;
+	background: $deviceOfflineColor;
 	border-radius: 50%;
 	margin-right: 1.5rem;
 
 	&.connected {
-		background: #5bc780;
+		background: $deviceOnlineColor;
 	}
 }
 
